--- a/src/index.css
+++ b/src/index.css
@@ -1,7 +1,9 @@
 /* ---------- root variables ---------- */
 
 :root {
-  --font-body-family: "sans-serif", -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen", "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue";
+  --font-body-family: "sans-serif", -apple-system, BlinkMacSystemFont,
+    Segoe UI, Roboto, Oxygen, Ubuntu, Cantarell, Fira Sans,
+    Droid Sans, Helvetica Neue;
   --green: rgb(38, 76, 89);
   --light-green: rgb(199, 208, 209);
   --light-grey: #f1f1f4;
@@ -26,19 +28,17 @@ h1 {
   font-size: 2em;
   font-weight: 500;
   letter-spacing: 0.1px;
-  
 }
 
 h2 {
+  font-size: 1.5em;
   font-weight: 500;
-  letter-spacing: 0.06rem;
   margin: 1em;
-  }
+}
 
 h3 {
   font-weight: 500;
   letter-spacing: 0.1px;
-  text-decoration: none;
 }
 
 a {
@@ -89,38 +89,11 @@ a {
   text-align: center;
 }
 
-
 img {
   height: 600px;
 }
 
-/* -------homepage styling---------- */
 
-.shop-by-category-container {
-  display: flex;
-  flex-direction: row;
-  flex-wrap: wrap;
-  box-sizing: inherit;
-  justify-content: center;
-  gap: 22px;
-}
-
-.shop-by-category-container > div img {
-  width: 100%;
-  height: 450px;
-  margin: auto;
-  display:inline;
-  cursor: pointer;
-}
-
-/* --------------footer styling------------ */
-
-.footer {
-  background-color: var(--green);
-  padding: 1em;
-  color: var(--text-color-light);
-  text-align: center;
-}
 
 /* ---------- animations ---------- */
 /* fade in */
@@ -194,7 +167,7 @@ nav a.active {
 
 @media (min-width: 1200px) {
   .grid-container {
-    grid-template-columns: 1fr 1fr 1fr;
+    grid-template-columns: 1fr 1fr 1fr 1fr;
     font-size: 22px;
   }
 }
@@ -208,6 +181,7 @@ nav a.active {
   animation: fadeIn 0.5s;
   cursor: pointer;
   grid-auto-flow: column;
+  gap: 5px;
 }
 
 .grid-container > article ::first-letter {
@@ -224,6 +198,37 @@ nav a.active {
   object-fit: cover;
 }
 
+/* -------homepage styling---------- */
+
+.slider {
+ padding-top: 58px;
+ padding-bottom: 0;
+}
+
+.grid-container > div {
+  padding: 15px;
+}
+
+.grid-container > div img {
+  width: 100%;
+  height: auto;
+  margin: auto;
+
+}
+
+.grid-container > div h3 a {
+  text-decoration: none;
+  
+} 
+
+/* --------------footer styling------------ */
+
+.footer {
+  background-color: var(--green);
+  padding: 1em;
+  color: var(--text-color-light);
+  text-align: center;
+}
 
 /* ---------- form styling ---------- */
 
