--- a/src/index.css
+++ b/src/index.css
@@ -1,9 +1,8 @@
 /* ---------- root variables ---------- */
 
 :root {
-  --font-body-family: "sans-serif", -apple-system, BlinkMacSystemFont,
-    Segoe UI, Roboto, Oxygen, Ubuntu, Cantarell, Fira Sans,
-    Droid Sans, Helvetica Neue;
+  --font-body-family: "sans-serif", -apple-system, BlinkMacSystemFont, Segoe UI,
+    Roboto, Oxygen, Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue;
   --green: rgb(38, 76, 89);
   --light-green: rgb(199, 208, 209);
   --light-grey: #f1f1f4;
@@ -14,11 +13,10 @@
 }
 
 body {
-  padding: 58px 0 0;
+  padding: 0 0 0;
   margin: 0 0 0;
   font-family: var(--font-body-family);
   background-color: var(--light-green);
-  color: var(--text-color-dark);
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   letter-spacing: 0.6px;
@@ -69,32 +67,6 @@ a {
   text-transform: uppercase;
 }
 
-.contact-page {
-  display: grid;
-  padding-bottom: 50px;
-  margin-left: 50px;
-  margin-right: 50px;
-}
-
-.about-us-page {
-  display: grid;
-  padding: 4em;
-  padding-top: 5px;
-  padding-bottom: 5px;
-}
-
-.delete-page {
-  display: grid;
-  padding: 0;
-  text-align: center;
-}
-
-img {
-  height: 600px;
-}
-
-
-
 /* ---------- animations ---------- */
 /* fade in */
 @keyframes fadeIn {
@@ -117,10 +89,14 @@ img {
   }
 }
 
+img {
+  height: 600px;
+}
+
 /* ---------- nav styling ---------- */
 nav {
   background-color: var(--green);
-  position: fixed;
+  position: static;
   top: 0;
   left: 0;
   right: 0;
@@ -161,14 +137,14 @@ nav a.active {
 @media (min-width: 600px) {
   .grid-container {
     grid-template-columns: 1fr 1fr;
-    font-size: 12px;
+    font-size: 16px;
   }
 }
 
 @media (min-width: 1200px) {
   .grid-container {
     grid-template-columns: 1fr 1fr 1fr 1fr;
-    font-size: 22px;
+    font-size: 18px;
   }
 }
 
@@ -199,11 +175,6 @@ nav a.active {
 }
 
 /* -------homepage styling---------- */
-
-.slider {
- padding-top: 58px;
-}
-
 .grid-container > div {
   padding: 15px;
 }
@@ -212,25 +183,59 @@ nav a.active {
   width: 100%;
   height: auto;
   margin: auto;
-
 }
 
 .grid-container > div h3 a {
   text-decoration: none;
-  
-} 
-
-/* --------------footer styling------------ */
+}
 
 .footer {
   background-color: var(--green);
-  padding: 1em;
   color: var(--text-color-light);
+  text-align: center;
+  padding: 1em;
+  align-content: inherit;
+}
+
+/* ----------about page---------------- */
+.about-page {
+  display: grid;
+  margin: auto;
+  padding: 10px;
+  margin-top: -15px;
+}
+
+/* ----------contact page-------------- */
+.contact-page {
+  display: grid;
+  margin: auto;
+}
+
+textarea {
+  margin: 1em auto;
+  width: 100%;
+  max-width: 350px;
+  padding: 1em;
+  box-sizing: border-box;
+  display: block;
+  background: var(--white);
+  border: solid 2px var(--green);
+  font-family: var(--font-body-family);
+}
+
+/*------------dashboard styling--------- */
+span {
+  color: green;
+  text-align: left;
+}
+
+.delete-page {
+  display: grid;
+  padding: 0;
   text-align: center;
 }
 
 /* ---------- form styling ---------- */
-
 form {
   margin: auto;
   box-shadow: 1px 1px 8px rgba(0, 0, 0, 0.25);
@@ -263,21 +268,6 @@ button {
   margin: 1em auto 0;
 }
 
-/* button.btn-outline {
-  background-color: var(--light-green);
-  color: var(--green);
-  border: solid 2px var(--green);
-}
-
-.btn-sign-out {
-  position: absolute;
-  right: 0;
-  top: 0;
-  cursor: pointer;
-  font-size: 0.7em;
-  padding: 2.032em 1em;
-} */
-
 input {
   margin: 1em auto;
   width: 100%;
@@ -292,74 +282,9 @@ input {
 .image-preview {
   width: 100%;
   max-width: 350px;
-  height: 200px;
+  height: 300px;
   object-fit: cover;
   margin: auto;
   display: block;
   cursor: pointer;
-}
-
-/* form .file-input {
-  display: none;
-} */
-
-/* ---------- loader styling ---------- */
-/* .loader {
-  position: fixed;
-  left: 0px;
-  top: 0px;
-  width: 100%;
-  height: 100%;
-  z-index: 99999999;
-  overflow: hidden;
-  background: var(--loader-background-color);
-  text-align: center;
-} */
-
-.spinner {
-  border: 5px solid var(--light-green);
-  border-radius: 50%;
-  border-top: 5px solid var(--green);
-  width: 50px;
-  height: 50px;
-  -webkit-animation: spin 1s linear infinite;
-  /* Safari */
-  animation: spin 1s linear infinite;
-  display: inline-block;
-  vertical-align: middle;
-  position: absolute;
-  margin: auto;
-  top: 0;
-  right: 0;
-  bottom: 0;
-  left: 0;
-}
-
-.hide {
-  visibility: hidden;
-  opacity: 0;
-  transition: visibility 0s 0.4s, opacity 0.4s linear;
-}
-
-.avatar {
-  display: flex;
-  align-items: center;
-  margin: 0 0 1.2em;
-  text-align: left;
-}
-
-.avatar span {
-  margin: 0 0 0 1em;
-}
-
-.avatar h3,
-.avatar p {
-  margin: 0;
-}
-
-article .avatar img {
-  max-width: 50px;
-  height: 50px;
-  object-fit: cover;
-  border-radius: 50%;
 }
